--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
 	"type": "module",
 	"devDependencies": {
 		"@types/node": "^22.15.19",
-		"jest": "^29.7.0"
+		"jest": "^29.7.0",
+		"typescript": "^5.8.3"
 	},
 	"scripts": {
-		"test": "jest"
+		"test": "jest",
+		"dev": "tsc && node dist/task3.js"
 	},
 	"dependencies": {
 		"ascii-table3": "^0.9.0"
